Fixed code spacing and renamed buttons style to make more sense

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,14 +25,10 @@ html {
 
 /*----------------------Buttons---------------- */
 
-.btn-cta {
-	width: 229px;
+.btn-custom-orange {
 	height: 70px;
 	border-radius: 0;
 	padding-top: 14px;
-}
-
-.btn-orange {
 	font-size: 24px;
 	font-weight: 300;
 	color: #fff;
